// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GridHead > should match the snapshot 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th>
          <div
            class="cl-grid-checkbox"
          >
            <input
              class="cl-grid-checkbox__input"
              id="select_all_test-grid-id"
              type="checkbox"
            />
            <label
              class="cl-label"
              for="select_all_test-grid-id"
            >
              <span
                class="cl-icon chop-icon__square cl-icon_extra-small"
              />
            </label>
          </div>
        </th>
        <th
          class="cl-grid-header-cell"
        >
          Col 1
        </th>
        <th
          class="cl-grid-header-cell"
        >
          Col 2
        </th>
        <th
          class="cl-grid-header-cell"
        >
          Col 3
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`GridHead > snapshot with sorting enabled > should match snapshot with sortableByDefault=true 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 1
            </span>
            <button
              aria-busy="false"
              aria-label="Sort by Col 1 ascending"
              class="cl-icon-button cl-grid-sort-button"
              type="button"
            >
              <span
                class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
              />
            </button>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 2
            </span>
            <button
              aria-busy="false"
              aria-label="Sort by Col 2 ascending"
              class="cl-icon-button cl-grid-sort-button"
              type="button"
            >
              <span
                class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
              />
            </button>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 3
            </span>
            <button
              aria-busy="false"
              aria-label="Sort by Col 3 ascending"
              class="cl-icon-button cl-grid-sort-button"
              type="button"
            >
              <span
                class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
              />
            </button>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`GridHead > snapshot with sorting enabled > should match snapshot with sorted column 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 1
            </span>
            <button
              aria-busy="false"
              aria-label="Sort by Col 1 descending"
              class="cl-icon-button cl-grid-sort-button"
              type="button"
            >
              <span
                class="cl-icon-button__icon cl-icon chop-icon__arrow-up-circle cl-icon_small"
              />
            </button>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 2
            </span>
            <button
              aria-busy="false"
              aria-label="Sort by Col 2 ascending"
              class="cl-icon-button cl-grid-sort-button"
              type="button"
            >
              <span
                class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
              />
            </button>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 3
            </span>
            <button
              aria-busy="false"
              aria-label="Sort by Col 3 ascending"
              class="cl-icon-button cl-grid-sort-button"
              type="button"
            >
              <span
                class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
              />
            </button>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
